# lang_Poc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  effect-poc.cabal  hie.yaml
.cursor/rules/: rules.mdc
.specstory/history/: 2025-05-29_06-17-chat-name-generation.md  2025-05-29_06-44-chat-name-generation.md  2025-05-29_06-53-chat-name-generation.md  2025-05-29_09-28-generate-a-name-for-the-chat.md  2025-05-29_09-48-generate-a-name-for-the-chat.md  2025-05-29_10-29-generate-a-name-for-the-chat.md  2025-05-30_04-58-resolve-cabal-module-loading-error.md
app/: Main.hs
src/: Eval.hs  Kind.hs  Parser.hs  Syntax.hs  Typecheck.hs
src/Typecheck/: Infer.hs  Subst.hs  Unify.hs
test/: Main.hs  ParserTest.hs  RunParserTest.hs
test/Test/: Kind.hs  Parser.hs  Syntax.hs
test/Test/Typecheck/: Infer.hs  Subst.hs  Unify.hs
